--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 DB_HOST=localhost
 DB_PORT=5432
-DB_USER=user
-DB_PASSWORD=password
-DB_NAME=my_database
+DB_USER=postgres
+DB_PASSWORD=123456789
+DB_NAME=biblioteca
